--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "bitcoin-p2p-handshake"
-version = "0.1.0"
+name = "p2p-handshake-123"
+version = "1.0.0"
+authors = ["ghz"]
 edition = "2018"
 
 [dependencies]
-bitcoin = "0.29.2"
 bitcoin_hashes = "0.11.0"
-bytes = "1.4.0"
 chrono = { version = "0.4.19", features = ["serde"] }
-rand = "0.8.4"
 tokio = { version = "1.14", features = ["full"] }
