--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["ghz"]
 edition = "2018"
 
 [dependencies]
-bitcoin_hashes = "0.11.0"
+bitcoin = "0.29.2"
 chrono = { version = "0.4.19", features = ["serde"] }
 tokio = { version = "1.14", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
